--- a/index.html
+++ b/index.html
@@ -1,217 +1,62 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
-    <title>Электронная библиотека</title>
+    <link rel="stylesheet" href="css/fontello.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Main page</title>
 </head>
 <body>
-    <nav class="navbar bg-light navbar-light navbar-expand-sm">
-        <a href="#" class="navbar-brand">
-            <img class="logo" src="logo.png" alt="logo">
-        </a>
-        <button
-          type="button"
-          class="navbar-toggler"
-          data-toggle="collapse"
-          data-target="#main-menu"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar7">
-          <ul class="navbar-nav ml-auto flex-nowrap">
-              <li class="nav-item">
-                  <a href="#" class="nav-link">Главная</a>
-              </li>
-              <li class="nav-item">
-                  <a href="#" class="nav-link">Новости</a>
-              </li>
-              <li class="nav-item">
-                  <a href="#" class="nav-link">Каталог</a>
-              </li>
-              <li class="nav-item">
-                  <a href="#" class="nav-link">Личный кабинет</a>
-              </li>
-          </ul>
-      </div>
-          </ul>
-        </div>
-
-      </nav>
-      <main>
-        <div id="carousel" class="carousel slide" data-ride="carousel">
-            <ul class="carousel-indicators">
-                <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel" data-slide-to="1"></li>
-            </ul>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="banner 1.png">
-                    <div class="carousel-caption">
-                        <h3>Электронная библиотека</h3>
-                        <p>Тысячи книг и учебников в одном месте и всегда доступны онлайн</p>
+    <!-- Header start -->
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="text-center text-white">Видео курс по вёрстке для начинающих HTML & CSS</h1>
+                    <div class="itd_play" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <div class="itd_triangle"></div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="banner 2.png">
-                    <div class="carousel-caption">
-                        <h3>Красивые изображения для рабочего стола</h3>
-                        <p>Например, самолет, затерянный в лесу. Почему бы и нет?</p>
-                    </div>
+                    <a href="#footer" class="btn btn-itd btn-lg text-uppercase">Заказать</a>
                 </div>
             </div>
-            <a href="#carousel" class="carousel-control-prev" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a href="#carousel" class="carousel-control-next" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </a>
         </div>
+    </header>
+    <!-- Header end -->
+
+    <main>
+
     </main>
-    <br>
-    <br>
-    <br>
-    <div class="container">
-      <div class="card-wrapper-one">
-        <div class="card col-lg-3">
-          <img src="pic-01.png" alt="pic" class="card-img-top" />
 
-          <!-- <div class="card-header">Хедер</div> -->
-          <div class="card-body">
-            <h5 class="card-title">ИСКУССТВО</h5>
-            <p class="card-text">
-              Увлекаетесь искусством? Для Вас<br>создан целый набор книг,<br>посвященной данной теме
-            </p>
-          </div>
-        </div>
-        <div class="card col-lg-3 shadow-none">
-          <img src="pic-02.png" alt="pic" class="card-img-top" />
+    <!-- Footer start -->
+    <footer id="footer">
 
-          <!-- <div class="card-header">Хедер</div> -->
-          <div class="card-body">
-            <h5 class="card-title">ТОЧНЫЕ НАУКИ</h5>
-            <p class="card-text">
-              Математика,химия,физика... Весь<br>материал, собран на портале<br>"Электронная библиотека"
-            </p>
-          </div>
-        </div>
-        <div class="card col-lg-4">
-          <img src="pic-03.png" alt="pic" class="card-img-top" />
+    </footer>
+    <!-- Footer end -->
 
-          <!-- <div class="card-header">Хедер</div> -->
-          <div class="card-body">
-            <h5 class="card-title">ИЛЛЮСТРАЦИИ</h5>
-            <p class="card-text">
-              Интересна фотография? Загляните к<br>нам и оцените труды мировых<br>фотографов
-            </p>
+    <!-- Modal Window -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Трейлер видео курса по HTML и CSS</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <style>
+                    .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+                </style>
+                <div class='embed-container'>
+                    <iframe src='https://www.youtube.com/embed//bWNmJqgri4Q' frameborder='0' allowfullscreen></iframe>
+                </div>
+            </div>
           </div>
         </div>
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <div class="text-for-card">
-        <h3> ПОПУЛЯРНЫЕ КНИГИ</h3>
-        <p>На сайте Электронной Библиотеке собрано более тысячи книг</p>
-      </div>  
-      <div class="card-wrapper">
-          <div class="card col-lg-2">
-            <img src="book-01.jpg" alt="Lego" class="card-img-top" />
-            <div class="card-body">
-              <h5 class="card-title">Алгебра 7<br>класс</h5>
-              <p class="card-text">
-                Школьные<br>  предметы
-              </p>
-            </div>
-          </div>
-          <div class="card col-lg-2">
-            <img src="book-02.jpg" alt="Lego" class="card-img-top" />
-            <!-- <div class="card-header">Хедер</div> -->
-            <div class="card-body">
-              <h5 class="card-title">ВСЕОБЩАЯ<br> ИСТОРИЯ</h5>
-  
-              <p class="card-text">
-               Школьные<br> предметы
-              </p>
-            </div>
-          </div>
-          <div class="card col-lg-2">
-            <img src="book-03.jpg" alt="Lego" class="card-img-top" />
-  
-            <!-- <div class="card-header">Хедер</div> -->
-            <div class="card-body">
-              <h5 class="card-title">ГАРРИ<br>ПОТТЕР</h5>
-              <p class="card-text">
-                Художественная <br> литература
-              </p>
-            </div>
-          </div>
-          <div class="card col-lg-2">
-            <img src="book-04.jpg" alt="Lego" class="card-img-top" />
-  
-            <!-- <div class="card-header">Хедер</div> -->
-            <div class="card-body">
-              <h5 class="card-title">СОЗДАНИЕ <br> ВЕБ-САЙТОВ</h5>
-              <p class="card-text">
-                *Для чайников*
-              </p>
-            </div>
-          </div>
-          <div class="card col-lg-2">
-            <img src="book-05.jpg" alt="Lego" class="card-img-top" />
-  
-            <!-- <div class="card-header">Хедер</div> -->
-            <div class="card-body">
-              <h5 class="card-title">АНГЛИЙСКИЙ <br>ЯЗЫК</h5>
-              <p class="card-text">
-                Справочник
-              </p>
-            </div>
-            </div>
-            <div class="card col-lg-2">
-              <img src="book-06.jpg" alt="Lego" class="card-img-top" />
-    
-              <!-- <div class="card-header">Хедер</div> -->
-              <div class="card-body">
-                <h5 class="card-title">РУКОВОДСТВО <br> HTML/CSS</h5>
-                <p class="card-text">
-                  Справочник
-                </p>
-              </div>
-            </div>
-      </div>
-    </div>
-    <div class="mapa">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d27067.38724227473!2d48.656823967840005!3d54.36875813653771!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3f1bf322e0e3%3A0x924217222e8de06a!2z0JLRi9GB0YjQuNC5INCa0L7Qu9C70LXQtNC2INCj0LvQk9CjINCX0LDQstC-0LvQttGM0LU!5e0!3m2!1sru!2sru!4v1646735313678!5m2!1sru!2sru" width="100%" height="600" style="border:0;" allowfullscreen="0" loading="lazy"></iframe>
-    </div>
-    <div class="footer"> 
-      <div class="footer-texts">
-        <br>
-        <br>
-        <h6 class="shadow-none"><strong>Контактная информация</strong><br></h6>
-        <p>г.Ульяновск<br>Бульвар Львовский 5</p></div>
-      <div class="footer-texts-two">
-        <br>
-        <br>
-        <h6 class="shadow-none"><strong>Основное меню</strong><br></h6>
-        <p>Главное<br> Новости<br>Каталог<br>Личный кабинет</p>
-      </div>
-        <div class="footer-texts-three">
-        <br>
-        <br>
-          <h6 class="shadow-none"><strong>Цитаты великих людей</strong><br></h6>
-          <p>Кто хочет приносить пользу, тот даже со<br>связанными руками, может сделать<br>много добра.<br>Ф. Достоевский</p>
-        <br>
-        <br>
-      </div>       
-        
-      </div>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
