--- a/index.html
+++ b/index.html
@@ -56,6 +56,53 @@
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="row">
+              <h1 class="text-about">О КУРСЕ</h1>
+                <div class="col-lg-4">
+                  <div class="td-about">
+                      <img src="image-removebg-preview.png" alt="img" class="img-about">
+                      <p class="p-about-first">Структурированый материал</p>
+                      <hr>
+                  </div>
+                </div>
+                  <div class="col-lg-4">
+                  <div class="td-about">
+                    <img src="image-removebg-preview (1).png" alt="img" class="img-about-two">
+                    <p class="p-about-two">Символическая цена</p>
+                    <hr>
+                </div>
+                  </div>
+                  <div class="col-lg-4">
+                  <div class="td-about">
+                    <img src="image-removebg-preview (5).png" alt="img" class="img-about-three">
+                    <p class="p-about-three">Пожизненный доступ</p>
+                    <hr>
+                </div>
+                </div>
+                <div class="col-lg-4">
+                <div class="td-about">
+                    <img src="image-removebg-preview (4).png" alt="img" class="img-about-four">
+                    <p class="p-about-four">Практические задания</p>
+                    <hr>
+                </div>
+                </div>
+                <div class="col-lg-4">
+                <div class="td-about">
+                    <img src="image-removebg-preview (3).png" alt="img" class="img-about-five">
+                    <p class="p-about-five">35 видео уроков (5 часов)</p>
+                    <hr>
+                </div>
+                </div>
+                <div class="col-lg-4">
+                <div class="td-about">
+                    <img src="image-removebg-preview (2).png" alt="img" class="img-about-six">
+                    <p class="p-about-six">Просмотр со смартфона</p>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
