--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                 </div>
                 <div class="button" style="margin-left: -15px;width: 150px;margin-left: 45%;margin-top: 2%; ">
                     <button class="btn btn-primary" style="margin-left: 45%; background-color: #05b1b1; border-color: #05b1b1; width:150px;">
-                        <a href="https://papik.pro/uploads/posts/2021-11/thumbs/1636318391_1-papik-pro-p-stiker-figa-1.jpg" class="c-f-href">ЗАКАЗАТЬ</a>
+                        <a href="#footer" class="btn btn-itd btn-lg text-uppercase">Заказать</a>
                     </button>
                 </div>
-                    
+
             </div>
             </div>
             </div>
